fix: pipelines testv2 step was renamed to setup
now the flow is setup and run nox or any other step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ executors:
   python:
     docker:
       - image: cimg/python:3.8.16
-    working_directory: /tmp/workspace
+    working_directory: /workspace
 
 jobs:
   Setup:
@@ -33,9 +33,9 @@ jobs:
           name: Install dependencies
           command: poetry install --no-ansi
       - persist_to_workspace:
-          root: /
+          root: .
           paths:
-            - /tmp/workspace
+            - ./*
   Nox:
     executor: python
     steps:
