fix: pipelines testv2 step was renamed to setup
now the flow is setup and run nox or any other step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
     executor: python
     steps:
       - attach_workspace:
-          at: /tmp/workspace
+          at: ~/workdir
       - run:
           name: Run Nox
           command: poetry run nox
