fix: pipelines testv2 step was renamed to setup
now the flow is setup and run nox or any other step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,9 @@ jobs:
           command: cp .env.example .env
       - run:
           name: Install dependencies
-          command: poetry install --no-ansi
+          command: |
+            poetry config virtualenvs.in-project true
+            poetry install --no-ansi
       - persist_to_workspace:
           root: ~/workdir
           paths:
