--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Felipe Restrepo <maferelo@users.noreply.github.com>"]
 [tool.poetry.dependencies]
 aiofiles = "22.1.0"
 alembic = "1.9.0"
-asyncpg = "0.25.0"
+asyncpg = "0.27.0"
 click = "8.1.3"
 desert = "2022.9.22"
 fastapi = "0.78.0"
@@ -17,13 +17,12 @@ ipykernel = "6.19.4"
 jinja2 = "3.1.2"
 markdown = "3.4.1"
 marshmallow = "3.19.0"
-numpy = "1.22.2"
+numpy = "1.23.5"
 ormar = "0.12.0"
-pandas = "1.3"
+pandas = "1.5.3"
 psycopg2-binary = "2.9.5"
 py = "1.11.0"
-python = "3.8.16"
-python-crontab = "2.7.0"
+python = ">=3.8.16,<3.12"
 python-decouple = "3.6"
 python-dotenv = "0.21.0"
 python-multipart = "0.0.5"
@@ -33,6 +32,9 @@ scikit-learn = "0.24.2"
 sqlalchemy = "1.4.41"
 typer = "0.6.1"
 uvicorn = "0.18.3"
+tensorflow = "2.12.0"
+yfinance = "^0.2.20"
+matplotlib = "^3.7.1"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "1.7.4"
@@ -57,7 +59,6 @@ pytest-cov = "4.0.0"
 pytest-mock = "3.10.0"
 pytest-xdist = "3.1.0"
 pyupgrade = "3.3.1"
-safety = "2.3.5"
 shellcheck-py = "0.8.0.4"
 sphinx = "5.3.0"
 sphinx-autodoc-typehints = "1.19.5"
@@ -67,7 +68,7 @@ xdoctest = "1.1.0"
 yamllint = "1.28.0"
 
 [tool.poetry.scripts]
-wiki = "src.app.console:main"
+wiki = "app.console:main"
 
 
 [tool.coverage.paths]
