fix: vscode settings linters paths
switched poetry to make a local cache off the env

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,6 @@
   "editor.rulers": [88],
   "markdownlint.ignore": ["LICENSE"],
   "pylint.importStrategy": "fromEnvironment",
-  "pylint.path": ["${workspaceFolder}/.venv/bin/pylint"],
   "python.analysis.diagnosticSeverityOverrides": {
     "reportGeneralTypeIssues": "none"
   },
@@ -21,5 +20,6 @@
     "titleBar.activeForeground": "#ffffff"
   },
   "window.title": "${localWorkspaceFolderBasename}${separator}${activeEditorShort}",
-  "yaml.format.enable": true
+  "yaml.format.enable": true,
+  "mypy.runUsingActiveInterpreter": true
 }
